# VideoConnoisseur

./: 0001-ok.patch  ENVIRONMENT_READY.md  FINAL_SETUP.md  FINAL_SETUP.txt  FINAL_STATUS.txt  INSTALLATION.md  QUICK_SETUP.txt  README.md  READY.txt  SETUP_COMPLETE.md  SETUP_COMPLETE.txt  SETUP_VERIFIED.txt  VIDEO_ANALYSIS.md  app.py  audio_analysis.py  classification.py  config.py  database_schema.sql  environment_ready.txt  kilo.json  main.py  models.py  preprocessing.py  pyproject.toml  requirements.txt  run_app.py  run_server.sh  setup.py  setup.sh  start_app.py  test_app.py  video_connoisseur_pro.py  visual_analysis.py
templates/: index.html  script.js  styles.css
