[project]
name = "videoconnoisseur"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faster-whisper>=1.2.1",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "numpy>=2.4.4",
    "ollama>=0.6.1",
    "opencv-python>=4.13.0.92",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
]
